# tacobot

./: .ant  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.kiro/: IMPLEMENTATION_SUMMARY.md
.kiro/specs/picoclaw-go-to-rust/: design.md  requirements.md  tasks.md
config/: config.example.yaml
proptest-regressions/config/: property_tests.txt
src/: lib.rs  main.rs
src/agent/: context.rs  executor.rs  loop_impl.rs  memory.rs  mod.rs
src/auth/: mod.rs  oauth2.rs  pkce.rs  token_storage.rs
src/channels/: framework.rs  mod.rs
src/config/: mod.rs  property_tests.rs
src/device/: manager.rs  mod.rs
src/error/: mod.rs  types.rs
src/llm/: client.rs  framework.rs  mod.rs
src/logging/: mod.rs  setup.rs
src/runtime/: mod.rs  property_tests.rs
src/session/: manager.rs  mod.rs  store.rs
src/tools/: base.rs  framework.rs  mod.rs  registry.rs  write_file.rs
